--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
       rel="stylesheet"
     />
+    <script src="https://cdn.jsdelivr.net/npm/ti-icons@0.1.2/ie7/ie7.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/ti-icons@0.1.2/css/themify-icons.min.css"
+    />
   </head>
-  <body>
+  <body class="bg-dark text-white">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
